<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    android:elevation="7dp">


    <LinearLayout
        android:id="@+id/mainview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/tool_bar">
            </include>

            <TextView
                android:id="@+id/toolbar_title"
                android:elevation="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/white"

                />

        </FrameLayout>

        <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:fillViewport="true"-->
            <!--android:layout_margin="8dp"-->
            <!--android:scrollbars="none">-->

            <ScrollView
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:layout_below="@id/headerAlert"
                android:fillViewport="true"
                android:scrollbars="none"
                android:layout_above="@+id/okBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/term1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms1"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        />
                    <TextView

                        android:id="@+id/term2Header"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms2"

                        android:textSize="17sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/term2"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term2Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms3"

                        android:textSize="17sp"
                        android:textColor="@color/white"
                        />
                    <TextView

                        android:id="@+id/term3Header"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms4"

                        android:textSize="17sp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:id="@+id/term3"

                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term3Header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms5"

                        android:textSize="17sp"
                        android:textColor="@color/white"

                        />
                    <TextView
                        android:id="@+id/term4"

                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms6"
                        android:textSize="17sp"
                        android:textColor="@color/white"

                        />
                    <TextView
                        android:id="@+id/term5"

                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms7"
                        android:textSize="17sp"
                        android:textColor="@color/white"

                        />
                    <TextView
                        android:id="@+id/term6"

                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/term5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/terms8"
                        android:layout_marginBottom="10dp"
                        android:textSize="17sp"
                        android:textColor="@color/white"

                        />

                </RelativeLayout>


            </ScrollView>

        <!--</RelativeLayout>-->

    </LinearLayout>


    <fragment
        android:id="@+id/left_drawer"
        android:name="Fragments.NavigationDrawer"
        android:layout_width="265dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:layout="@layout/drawerlayout"
        tools:layout="@layout/drawerlayout" />


</android.support.v4.widget.DrawerLayout>