<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:elevation="7dp">


    <LinearLayout
        android:id="@+id/mainview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/tool_bar">
            </include>

            <TextView
                android:id="@+id/toolbar_title"
                android:elevation="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/white"

                />

        </FrameLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/aboutusheader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WE ARE MOVIE BUFFS"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="12dp"
                />
            <!--<ImageView-->

                  <!--android:layout_marginLeft="10dp"-->
                <!--android:layout_marginRight="10dp"-->
                <!--android:layout_marginBottom="150dp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:src="@drawable/aboutus_min"-->
                <!--android:layout_gravity="center"-->
                <!--/>-->
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/browseMovie"
                android:textColor="@color/white"
                android:ems="15"

                />
                <TextView
                    android:gravity="center"
                    android:id="@+id/rightback"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/right"
                    android:textColor="@color/white"
                    android:textSize="55dp"
                    android:singleLine="true"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/browseMovie1"
                    android:textColor="@color/white"
                    android:ems="15"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/downback"
                    android:layout_marginRight="40dp"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/down"
                    android:textColor="@color/white"
                    android:textSize="55dp"
                    android:singleLine="true"
                    />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/browseMovie3"
                    android:textColor="@color/white"
                    android:ems="15"

                    />
                <TextView

                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="55dp"
                    android:singleLine="true"
                    android:id="@+id/backabout"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/browseMovie2"
                    android:textColor="@color/white"
                    android:ems="15"
                    />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <fragment
        android:id="@+id/left_drawer"
        android:name="Fragments.NavigationDrawer"
        android:layout_width="265dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        app:layout="@layout/drawerlayout"
        tools:layout="@layout/drawerlayout" />


</android.support.v4.widget.DrawerLayout>